ie visibility, safari fix and header spacing fix

--- a/source/stylesheets/timeline.css.scss
+++ b/source/stylesheets/timeline.css.scss
@@ -24,12 +24,11 @@ $darkgraytitle: #3F3F3E;
   font-size: 1.2em;
   font-weight: 900;
   margin: 0 auto;
-  max-width: 5%;
+  max-width: 100%;
   padding: 15px 23px;
   position: relative;
   text-align: center;
   text-transform: uppercase;
-  width: 100%;
   z-index: 2;
 }
 
